photo-gallery-with-pv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-gallery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.micple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-photo-gallery
                port:
                  number: 3000
