photo-gallery-with-pv/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-gallery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.somacharnews.com
      secretName: test-somacharnews-com-tls
  rules:
    - host: test.somacharnews.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-photo-gallery
                port:
                  number: 3000
